Use chevron icons in <le-number-input> instead of arrow chars to align buttons correctly

--- a/packages/core/src/components/le-number-input/le-number-input.css
+++ b/packages/core/src/components/le-number-input/le-number-input.css
@@ -70,7 +70,7 @@ input {
   font-size: inherit;
   outline: none;
   text-align: end; /* Aligned to end */
-  -moz-appearance: textfield; /* Remove default spinners in Firefox */
+  appearance: textfield; /* Remove default spinners in Firefox */
 }
 
 /* Remove default spinners in Chrome/Safari/Edge */
@@ -117,6 +117,10 @@ input::placeholder {
   color: var(--le-input-desc-color);
   font-size: 10px;
   line-height: 1;
+
+  le-icon {
+    color: var(--le-input-desc-color);
+  }
 }
 
 .le-input-control-btn:hover {
